--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ main .top .right .pictures .image {
 }
 
 .bottom {
+  max-width: 1280px;
   position: relative;
   top: 84px;
   display: flex;
@@ -132,15 +133,20 @@ main .top .right .pictures .image {
   opacity: 0.5;
 }
 .bottom .stepper {
+  width: 100%;
+  padding-left: 100px;
   display: flex;
   justify-content: space-between;
 }
 .bottom .stepper li {
   position: relative;
-  background-color: #fff38a;
+  background-color: #827B68;
   width: 32px;
   height: 32px;
   border-radius: 50%;
+}
+.bottom .stepper .activ {
+  background-color: #fff38a;
 }
 
 /*# sourceMappingURL=style.css.map */
