--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -108,22 +108,43 @@ main{
 		opacity: .5;
 	}
 
-	.stepper{
-		width: 100%;
-		padding-left: 100px;
+	ul{
 		display: flex;
 		justify-content: space-between;
+		flex-grow: 1;
 
 		li{
 			position: relative;
-			background-color: #827B68;
-			width: 32px;
-			height: 32px;
-			border-radius: 50%;
+			flex-grow: 1;
+
+			.line{
+				&:before, &:after{
+					content: "";
+					position: absolute;
+					background-color: #fff38a;
+					width: 168px;
+					height: 1px;
+					opacity: .3;
+					right: 0;
+				}
+			}
+
+			&:after{
+				content: "";
+				right: 0;
+				position: absolute;
+				background: #fff38a;
+				width: 32px;
+				height: 32px;
+				border-radius: 50%;
+				transform: translate(0, -50%);
+			}	
+
+			// &.activ{
+			// 	background-color: #fff38a;
+			// }
+
 		}
 
-		.activ{
-			background-color: #fff38a;
-		}
 	}
 }
