--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 main {
   max-width: 1280px;
   margin: auto;
-  margin-top: 140px;
+  margin-top: 3vh;
   padding: 0 24px;
 }
 main .top {
@@ -111,7 +111,6 @@ main .top .right .pictures .image {
 }
 
 .bottom {
-  max-width: 1280px;
   position: relative;
   top: 84px;
   display: flex;
@@ -144,11 +143,11 @@ main .top .right .pictures .image {
 .bottom ul li .line:before, .bottom ul li .line:after {
   content: "";
   position: absolute;
-  background-color: #fff38a;
-  width: 168px;
+  background-color: #827B68;
   height: 1px;
   opacity: 0.3;
-  right: 0;
+  right: 32px;
+  left: 0;
 }
 .bottom ul li:after {
   content: "";
@@ -158,7 +157,11 @@ main .top .right .pictures .image {
   width: 32px;
   height: 32px;
   border-radius: 50%;
+  opacity: 0.3;
   transform: translate(0, -50%);
+}
+.bottom ul.activ {
+  opacity: 1;
 }
 
 /*# sourceMappingURL=style.css.map */
