--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,7 +21,7 @@ body{
 main{
 	max-width: 1280px;
 	margin: auto;
-	margin-top: 3vh;
+	margin-top: 100px;
 	padding: 0 24px;
 
 	.top{
@@ -34,7 +34,9 @@ main{
 	
 			.logos{
 				position: relative;
+				left: 0;
 				width: 80px;
+				height: 80px;
 				margin-bottom: 24px;
 				
 				img{
@@ -58,33 +60,46 @@ main{
 	
 			.titles{
 				margin-bottom: 8px;
-				position: relative;		
+				position: relative;
+				height: 49px;
 	
 				h1{
-					display: none;
-					&.activ{
-						display: block	;
-						font-size: 40px;
-						line-height: 49px;
+					display: block;
+					font-size: 40px;
+					line-height: 49px;
+
+					position: absolute;
+					left: 0;
+					opacity: 1;
+					transform: translate(0, 0);
+					transition: transform 1s ease, opacity 1s ease;
+
+					&:not(.activ){
+						opacity: 0;
+						transform: translate(100%, 0);
+					}
+					&.old {
+						opacity: 0;
+						transform: translate(-100%, 0);
 					}
 				}
 			}
 	
 			.descriptions{
 				margin-bottom: auto;
-				max-width: 422px;
 				position: relative;
-	
+				
 				p{
+						max-width: 422px;
 						display: block;
 						font-family: "Montserrat NORM";
 						line-height: 30px;
 						font-size: 20px;
-						position: absolute;
-
+						
 						opacity: 1;
 						transform: translate(0, 0);
 						transition: transform 1s ease, opacity 1s ease;
+						position: absolute;
 						left: 0;
 
 						&:not(.activ) {
@@ -109,16 +124,27 @@ main{
 			flex: 1;
 	
 			.pictures{
+				overflow: hidden;
 				aspect-ratio: 2/3;
 				position: relative;
 	
-				.image{
+				#picture{
 					width: 100%;
 					height: 100%;
 					background-size: cover;
 					position: absolute;
 					top: 0;
-					left: 0;	
+					left: 0;
+					transform: translate(0, 0);
+					transition: transform 1s ease;
+
+					&:not(.activ)
+					{
+						transform: translate(101%, 0);
+					}
+					&.old{
+						transform: translate(-100%, 0);
+					}
 				}
 			}
 		}
@@ -148,6 +174,9 @@ main{
 		transform: scaleX(-1);
 		margin-right: 40px;
 		opacity: .5;
+		&.activ{
+			opacity: 1;
+		}
 	}
 
 	ul{
